[gd_scene load_steps=11 format=3 uid="uid://ctp0v8b07jg7a"]

[ext_resource type="Script" uid="uid://bpo7bldsu63g3" path="res://player/player_controller.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bcurelkjp51os" path="res://player/camera.gd" id="2_hqtel"]
[ext_resource type="Script" uid="uid://ssggqmpmlela" path="res://player/backpack.gd" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://db4bun8083ndb" path="res://player/player_hit.wav" id="2_qjkh3"]
[ext_resource type="Texture2D" uid="uid://dcb0pll4j2nup" path="res://player/crosshair.png" id="3_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_aqk2v"]

[sub_resource type="BoxMesh" id="BoxMesh_4flbx"]
size = Vector3(1.1, 1.51, 0.3)

[sub_resource type="Theme" id="Theme_qjkh3"]
default_font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjkh3"]
bg_color = Color(0.92099476, 0.9209946, 0.9209946, 0.21176471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6k8r"]
bg_color = Color(0.37752393, 0.6876234, 0, 1)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4flbx")
mouse_sensitivity = 0.25
hit_sound = ExtResource("2_qjkh3")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_aqk2v")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_hqtel")

[node name="HoldAnchor" type="Node3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.37, -0.3, -0.49)

[node name="Backpack" type="Node3D" parent="Camera" node_paths=PackedStringArray("item_slots", "weapon_slots")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3841858e-07, -0.030638933, -1.3227192)
script = ExtResource("2_onrkg")
slot_select_radius = 65.0
item_slots = [NodePath("ItemSlot1"), NodePath("ItemSlot2"), NodePath("ItemSlot3"), NodePath("ItemSlot4"), NodePath("ItemSlot5"), NodePath("ItemSlot6")]
weapon_slots = [NodePath("WeaponSlot")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.15)
mesh = SubResource("BoxMesh_4flbx")

[node name="ItemSlot1" type="Node3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3480632, 0.5458462, 0)

[node name="ItemSlot2" type="Node3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.103965, 0.5453751, 0)

[node name="ItemSlot3" type="Node3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.06394981, 0.131145, 0)

[node name="ItemSlot4" type="Node3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3880784, 0.13067377, 0)

[node name="ItemSlot5" type="Node3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3519174, -0.21266997, 0)

[node name="ItemSlot6" type="Node3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100110814, -0.2131412, 0)

[node name="WeaponSlot" type="Node3D" parent="Camera/Backpack"]
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, 0, -0.7535819, 0)

[node name="Crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_i3pqv")

[node name="ItemHover" type="ReferenceRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2
border_color = Color(1, 1, 1, 1)
border_width = 5.0
editor_only = false

[node name="ItemTooltip" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -128.5
offset_right = 500.0
offset_bottom = 128.5
grow_vertical = 2
color = Color(0, 0, 0, 0.7058824)

[node name="Text" type="RichTextLabel" parent="ItemTooltip"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 78.0
bbcode_enabled = true
text = "[font_size=24][color=white][b]Name[/b][br][/color][color=gray][i]Description.[/i][/color][/font_size]"
fit_content = true
autowrap_mode = 0

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -67.0
offset_right = 488.0
offset_bottom = 4.0
grow_vertical = 0
theme = SubResource("Theme_qjkh3")
text = "50"
vertical_alignment = 2

[node name="Bar" type="ProgressBar" parent="HealthLabel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qjkh3")
theme_override_styles/fill = SubResource("StyleBoxFlat_g6k8r")
value = 100.0
show_percentage = false

[node name="ItemLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -67.0
offset_right = -10.001099
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_qjkh3")
text = "10/10"
horizontal_alignment = 2
vertical_alignment = 2
